# reliefNET-GNN-nomad

./: .gitignore  README.md  pyproject.toml
models/: model_global_efficiency.ckpt  model_independent_paths.ckpt
scripts/: accessibility_indices.ipynb  antioquia_network.ipynb  catatumbo_network.ipynb  create_graph_catatumbo.ipynb  example.py  gnn.ipynb  simplify_graph.ipynb  uraba_network.ipynb
src/: accessibility_indices.py  cluster.py  config.py  criticality_score.py  flow_network.py  graph_construction.py  graph_neural_networks.py  plot.py  plot_graph.py  utils.py
