[project]
name = "reliefnet-gnn-nomad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "commitizen>=4.10.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
]

[project.scripts]
src = "src:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
fix = true

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.8.0",
    "jedi-language-server>=0.46.0",
    "jupyter>=1.1.1",
    "ruff>=0.14.10",
]
